refs #5192 added some doc blocks and prevent the menu hooks from appearing in the documentation as they are deprecated

--- a/plugins/CoreHome/angularjs/menudropdown/menudropdown.html
+++ b/plugins/CoreHome/angularjs/menudropdown/menudropdown.html
@@ -2,6 +2,7 @@
 
     <span class="title"
           ng-click="view.showItems=!view.showItems"
+          title="{{ tooltip }}"
           ng-bind-html="menuTitle"/>
 
     <div class="items" ng-show="view.showItems" ng-transclude></div>
