--- a/tests/PHPUnit/Integration/expected/test_TwoVisitors_twoWebsites_differentDays_scheduled_report_in_html_tables_only__ScheduledReports.generateReport_month.original.html
+++ b/tests/PHPUnit/Integration/expected/test_TwoVisitors_twoWebsites_differentDays_scheduled_report_in_html_tables_only__ScheduledReports.generateReport_month.original.html
@@ -4870,23 +4870,48 @@
                                                     
                                                                     <tr style="">
                                                                 <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
+                                                                                                                                        <img src='plugins/DevicesDetection/images/screens/unknown.gif'>
+                                        &nbsp;
+                                                                                                            Unknown                                                                                                                        </td>
+                                            <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
+                                                                                                8
+                                                                                    </td>
+                                            <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
+                                                                                                40
+                                                                                    </td>
+                                            <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
+                                                                                                5
+                                                                                    </td>
+                                            <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
+                                                                                                00:15:01
+                                                                                    </td>
+                                            <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
+                                                                                                0%
+                                                                                    </td>
+                                            <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
+                                                                                                0%
+                                                                                    </td>
+                                    </tr>
+                            
+                                                                    <tr style="background-color: rgb(249,250,250)">
+                                                                <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
                                                                                                                                         <img src='plugins/DevicesDetection/images/screens/normal.gif'>
                                         &nbsp;
                                                                                                             Desktop                                                                                                                        </td>
                                             <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
-                                                                                                10
+                                                                                                2
                                                                                     </td>
                                             <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
-                                                                                                43
+                                                                                                3
                                                                                     </td>
                                             <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
-                                                                                                4.3
+                                                                                                1.5
                                                                                     </td>
                                             <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
-                                                                                                00:12:37
+                                                                                                00:03:01
                                                                                     </td>
                                             <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
-                                                                                                10%
+                                                                                                50%
                                                                                     </td>
                                             <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
                                                                                                 0%
