--- a/tests/PHPUnit/Integration/expected/test_ecommerceOrderWithItems_scheduled_report_in_html_tables_only__ScheduledReports.generateReport_week.original.html
+++ b/tests/PHPUnit/Integration/expected/test_ecommerceOrderWithItems_scheduled_report_in_html_tables_only__ScheduledReports.generateReport_week.original.html
@@ -4170,7 +4170,7 @@
             <table style="border-collapse:collapse; margin-left: 5px;">
             <thead style="background-color: rgb(228,226,215); color: rgb(37,87,146); font-size: 11pt;">
                             <th style="padding: 6px 0;">
-                    &nbsp;Page URL&nbsp;&nbsp;
+                    &nbsp;Entry Page URL&nbsp;&nbsp;
                 </th>
                             <th style="padding: 6px 0;">
                     &nbsp;Entrances&nbsp;&nbsp;
@@ -4214,7 +4214,7 @@
             <table style="border-collapse:collapse; margin-left: 5px;">
             <thead style="background-color: rgb(228,226,215); color: rgb(37,87,146); font-size: 11pt;">
                             <th style="padding: 6px 0;">
-                    &nbsp;Page URL&nbsp;&nbsp;
+                    &nbsp;Exit Page URL&nbsp;&nbsp;
                 </th>
                             <th style="padding: 6px 0;">
                     &nbsp;Exits&nbsp;&nbsp;
@@ -4452,7 +4452,7 @@
             <table style="border-collapse:collapse; margin-left: 5px;">
             <thead style="background-color: rgb(228,226,215); color: rgb(37,87,146); font-size: 11pt;">
                             <th style="padding: 6px 0;">
-                    &nbsp;Page Name&nbsp;&nbsp;
+                    &nbsp;Entry Page title&nbsp;&nbsp;
                 </th>
                             <th style="padding: 6px 0;">
                     &nbsp;Entrances&nbsp;&nbsp;
@@ -4522,7 +4522,7 @@
             <table style="border-collapse:collapse; margin-left: 5px;">
             <thead style="background-color: rgb(228,226,215); color: rgb(37,87,146); font-size: 11pt;">
                             <th style="padding: 6px 0;">
-                    &nbsp;Page Name&nbsp;&nbsp;
+                    &nbsp;Exit Page Title&nbsp;&nbsp;
                 </th>
                             <th style="padding: 6px 0;">
                     &nbsp;Exits&nbsp;&nbsp;
