--- a/tests/PHPUnit/Integration/expected/test_TwoVisitors_twoWebsites_differentDays_scheduled_report_in_html_tables_and_graph__ScheduledReports.generateReport_month.original.html
+++ b/tests/PHPUnit/Integration/expected/test_TwoVisitors_twoWebsites_differentDays_scheduled_report_in_html_tables_and_graph__ScheduledReports.generateReport_month.original.html
@@ -3330,7 +3330,7 @@
             <table style="border-collapse:collapse; margin-left: 5px;">
             <thead style="background-color: rgb(228,226,215); color: rgb(37,87,146); font-size: 11pt;">
                             <th style="padding: 6px 0;">
-                    &nbsp;Page URL&nbsp;&nbsp;
+                    &nbsp;Entry Page URL&nbsp;&nbsp;
                 </th>
                             <th style="padding: 6px 0;">
                     &nbsp;Entrances&nbsp;&nbsp;
@@ -3396,7 +3396,7 @@
             <table style="border-collapse:collapse; margin-left: 5px;">
             <thead style="background-color: rgb(228,226,215); color: rgb(37,87,146); font-size: 11pt;">
                             <th style="padding: 6px 0;">
-                    &nbsp;Page URL&nbsp;&nbsp;
+                    &nbsp;Exit Page URL&nbsp;&nbsp;
                 </th>
                             <th style="padding: 6px 0;">
                     &nbsp;Exits&nbsp;&nbsp;
@@ -3597,7 +3597,7 @@
             <table style="border-collapse:collapse; margin-left: 5px;">
             <thead style="background-color: rgb(228,226,215); color: rgb(37,87,146); font-size: 11pt;">
                             <th style="padding: 6px 0;">
-                    &nbsp;Page Name&nbsp;&nbsp;
+                    &nbsp;Entry Page title&nbsp;&nbsp;
                 </th>
                             <th style="padding: 6px 0;">
                     &nbsp;Entrances&nbsp;&nbsp;
@@ -3659,7 +3659,7 @@
             <table style="border-collapse:collapse; margin-left: 5px;">
             <thead style="background-color: rgb(228,226,215); color: rgb(37,87,146); font-size: 11pt;">
                             <th style="padding: 6px 0;">
-                    &nbsp;Page Name&nbsp;&nbsp;
+                    &nbsp;Exit Page Title&nbsp;&nbsp;
                 </th>
                             <th style="padding: 6px 0;">
                     &nbsp;Exits&nbsp;&nbsp;
