revert 2d27720df26 as it broke the All websites dashboard (showing {{ 'string' }} in the UI) http://builds-artifacts.piwik.org/ui-tests.master/3998.1/screenshot-diffs/singlediff.html?processed=../processed-ui-screenshots/UIIntegrationTest_widgetize_allwebsites.png&expected=UIIntegrationTest_widgetize_allwebsites.png&github=UIIntegrationTest_widgetize_allwebsites.png

--- a/plugins/MultiSites/angularjs/dashboard/dashboard.html
+++ b/plugins/MultiSites/angularjs/dashboard/dashboard.html
@@ -58,7 +58,7 @@
             <tr ng-if="model.errorLoadingSites">
                 <td colspan="7">
                     <div class="notification system notification-error">
-                        {{ 'General_ErrorRequest'|translate('', '') }}
+                        {{ 'General_ErrorRequest'|translate }}
                     </div>
                 </td>
             </tr>
