--- a/tests/PHPUnit/Integration/expected/test_ecommerceOrderWithItems_scheduled_report_in_html_tables_and_graph__ScheduledReports.generateReport_week.original.html
+++ b/tests/PHPUnit/Integration/expected/test_ecommerceOrderWithItems_scheduled_report_in_html_tables_and_graph__ScheduledReports.generateReport_week.original.html
@@ -4338,7 +4338,7 @@
             <table style="border-collapse:collapse; margin-left: 5px;">
             <thead style="background-color: rgb(228,226,215); color: rgb(37,87,146); font-size: 11pt;">
                             <th style="padding: 6px 0;">
-                    &nbsp;Entry Page URL&nbsp;&nbsp;
+                    &nbsp;Page URL&nbsp;&nbsp;
                 </th>
                             <th style="padding: 6px 0;">
                     &nbsp;Entrances&nbsp;&nbsp;
@@ -4388,7 +4388,7 @@
             <table style="border-collapse:collapse; margin-left: 5px;">
             <thead style="background-color: rgb(228,226,215); color: rgb(37,87,146); font-size: 11pt;">
                             <th style="padding: 6px 0;">
-                    &nbsp;Exit Page URL&nbsp;&nbsp;
+                    &nbsp;Page URL&nbsp;&nbsp;
                 </th>
                             <th style="padding: 6px 0;">
                     &nbsp;Exits&nbsp;&nbsp;
@@ -4638,7 +4638,7 @@
             <table style="border-collapse:collapse; margin-left: 5px;">
             <thead style="background-color: rgb(228,226,215); color: rgb(37,87,146); font-size: 11pt;">
                             <th style="padding: 6px 0;">
-                    &nbsp;Entry Page title&nbsp;&nbsp;
+                    &nbsp;Page Name&nbsp;&nbsp;
                 </th>
                             <th style="padding: 6px 0;">
                     &nbsp;Entrances&nbsp;&nbsp;
@@ -4714,7 +4714,7 @@
             <table style="border-collapse:collapse; margin-left: 5px;">
             <thead style="background-color: rgb(228,226,215); color: rgb(37,87,146); font-size: 11pt;">
                             <th style="padding: 6px 0;">
-                    &nbsp;Exit Page Title&nbsp;&nbsp;
+                    &nbsp;Page Name&nbsp;&nbsp;
                 </th>
                             <th style="padding: 6px 0;">
                     &nbsp;Exits&nbsp;&nbsp;
