refs #5977 group goals in a menu if there are more than 3 goals. I reused an existing menuDropDown component that was already used for Language and Usermenu. I removed the round border there as all our other components to not have round corners. Also had to add some z-index because Segment and Date picker define a z-index. So to make sure the components are correct visible I had to add a z-index to the submenu and therefore to the top menu. I hope this does not introduce any side effects. Tested with leftMenu and with ZenMode...

--- a/plugins/CoreHome/angularjs/menudropdown/menudropdown.html
+++ b/plugins/CoreHome/angularjs/menudropdown/menudropdown.html
@@ -5,6 +5,23 @@
           title="{{ tooltip }}"
           ng-bind-html="menuTitle"/>
 
-    <div class="items" ng-show="view.showItems" ng-transclude></div>
+    <div class="items" ng-show="view.showItems">
+        <div class="search" ng-if="showSearch && view.showItems">
+            <input type="text" ng-model="view.searchTerm" placeholder="{{ 'General_Search'|translate }}" ng-change="searchItems(view.searchTerm)">
+
+            <img title="{{ 'General_Search'|translate }}"
+                 ng-show="!view.searchTerm"
+                 class="search_ico"
+                 src="plugins/Morpheus/images/search_ico.png"/>
+            <img title="{{ 'General_Clear'|translate }}"
+                 ng-show="view.searchTerm"
+                 ng-click="view.searchTerm='';searchItems('')"
+                 class="reset"
+                 src="plugins/CoreHome/images/reset_search.png"/>
+        </div>
+        <div ng-transclude>
+
+        </div>
+    </div>
 
 </div>
