refs #4996 many new tests and many bugfixes. Tests should be done now except for cross browser support. I fixed many issues as I did not consider that link tracking may be disabled or enabled and the behavior should be different in such a case.

--- a/tests/javascript/content-fixtures/trackerInternals.html
+++ b/tests/javascript/content-fixtures/trackerInternals.html
@@ -62,3 +62,19 @@
 <a id="ex116_hidden" href="http://www.example.com" data-track-content class="assertSize" style="display:none">
     <img src="img116.jpg" data-content-piece />
 </a>
+
+<div id="ex117" data-track-content>
+    <a id="ignoreInternalLink" href="/internallink" class="piwikContentIgnoreInteraction" data-content-target>Link</a>
+</div>
+
+
+<a id="ex118" href="piwik.php?test=5" data-track-content>Link</a>
+<a id="ex119" href="#test" data-track-content>Link</a>
+<a id="ex120" href="http://www.example.com" data-track-content>Link</a>
+<a id="ex121" href="/download.pdf" class="download" data-track-content>Link</a>
+<div id="ex122" data-track-content>
+    <a id="replacedLinkWithTarget" href="/internallink" data-content-target="/test">Link</a>
+</div>
+<div id="ex123" data-track-content>
+    <a id="replacedLinkWithTarget" data-content-target="/test">Link</a>
+</div>
