--- a/tests/javascript/content-fixtures/contentUtilities.html
+++ b/tests/javascript/content-fixtures/contentUtilities.html
@@ -21,6 +21,24 @@
     <a href="http://www.example.com" class="piwikContentTarget">Link</a>
 </div>
 
+
+<!-- test to make sure only clicked elements within target node are authorized -->
+<!-- authorized because content block is target and a link is within -->
+<div id="authorized1" data-track-content>
+    <a id="authorized1_1" href="http://www.example.com">Link</a>
+</div>
+<!-- authorized because span is within target -->
+<div id="authorized2" data-track-content>
+    <a href="http://www.example.com" data-content-target id="authorized2_1">Link<span id="authorized2_2"></span></a>
+</div>
+<!-- not authorized because span is not in target -->
+<div id="authorized3" data-track-content>
+    <span id="authorized3_1"></span>
+    <a href="http://www.example.com" data-content-target id="authorized3_2">Link</a>
+</div>
+
+
+
 <a href="http://www.example.com" id="aLinkToBeChanged">Link</a>
 
 <div class="media">
