--- a/plugins/CoreHome/angularjs/siteselector/siteselector.html
+++ b/plugins/CoreHome/angularjs/siteselector/siteselector.html
@@ -16,7 +16,7 @@
        href="javascript:void(0)"
        class="custom_select_main_link"
        ng-class="{'loading': model.isLoading}">
-        <span ng-bind-html="selectedSite.name || model.firstSiteName">?</span>
+        <span ng-bind-html="selectedSiteNameHtml || model.firstSiteName">?</span>
     </a>
 
     <div ng-show="view.showSitesList" class="custom_select_block">
