refs #4996 content JS tests do now run on IE10, latest FF + Chrome + Safari + Opera and on my local phantomjs but not on travis phantomjs

--- a/tests/javascript/content-fixtures/visibleNodes.html
+++ b/tests/javascript/content-fixtures/visibleNodes.html
@@ -2,10 +2,10 @@
 <div class="assertSize" id="ex2" style="opacity: 0"></div>
 <div class="assertSize" id="ex3" style="visibility: hidden"></div>
 <div class="assertSize" id="ex4" style="display: none"></div>
-<div class="assertSize" id="ex5" style="width: 0px;"></div>
-<div class="assertSize" id="ex6" style="height: 0px;"></div>
-<div class="assertSize" id="ex7" style="width: 0px;overflow: hidden;"></div>
-<div class="assertSize" id="ex8" style="height: 0px;overflow: hidden;"></div>
+<div class="assertSize" id="ex5" style="width: 0px;margin-top: 1px;margin-left: 1px;"></div>
+<div class="assertSize" id="ex6" style="height: 0px;margin-left: 1px;margin-left: 1px;"></div>
+<div class="assertSize" id="ex7" style="width: 0px;margin-top: 1px;margin-left: 1px;overflow: hidden;"></div>
+<div class="assertSize" id="ex8" style="height: 0px;margin-top: 1px;margin-left: 1px;overflow: hidden;"></div>
 
 <div id="ex9" style="margin-left: -110px;width: 50px;">Test</div>
 <div id="ex10" style="margin-left: 1000000px; width: 50px;">Test</div>
@@ -18,8 +18,8 @@
 <div class="assertSize" style="height: 0px;overflow: hidden;"><div class="assertSize" id="ex17"></div></div>
 
 <!-- at least one pixel has to be visible of the element -->
-<div id="ex18" style="margin-left: -118px;width: 110px;">Test</div>
-<div id="ex19" style="margin-left: -118px; width: 111px;">Test</div>
+<div id="ex18" style="margin-left: -110px;width: 110px;">Test</div>
+<div id="ex19" style="margin-left: -110px; width: 111px;">Test</div>
 
 <!-- positioned absolute -->
 <div id="ex20" style="height: 20px;width: 20px;position: absolute;left: 1px;top: -19px;"></div>
@@ -29,7 +29,7 @@
 
 <div id="ex24" style="height: 20px;width: 20px;position: absolute;left: 1px;top: -20px;"></div>
 <div id="ex25" style="height: 20px;width: 20px;position: absolute;left: -20px;top: 0px;"></div>
-<div id="ex26" style="height: 20px;width: 20px;position: absolute;right: -20px;top: 0px;"></div>
+<div id="ex26" style="height: 20px;width: 20px;position: absolute;right: -100px;top: 0px;"></div>
 <div id="ex27" style="height: 20px;width: 20px;position: absolute;left: 1px;bottom: -20px;"></div>
 
 <!-- positioned fixed -->
