--- a/tests/PHPUnit/Integration/expected/test_TwoVisitors_twoWebsites_differentDays_scheduled_report_in_html_tables_only__ScheduledReports.generateReport_month.original.html
+++ b/tests/PHPUnit/Integration/expected/test_TwoVisitors_twoWebsites_differentDays_scheduled_report_in_html_tables_only__ScheduledReports.generateReport_month.original.html
@@ -201,7 +201,7 @@
             </li>
                     <li>
                 <a href="#Goals_get" style="text-decoration:none; color: rgb(68,68,68);">
-                    Założenia
+                    Goals
                 </a>
             </li>
                     <li>
