--- a/tests/PHPUnit/Integration/expected/test_TwoVisitors_twoWebsites_differentDays_scheduled_report_in_html_tables_only__ScheduledReports.generateReport_month.original.html
+++ b/tests/PHPUnit/Integration/expected/test_TwoVisitors_twoWebsites_differentDays_scheduled_report_in_html_tables_only__ScheduledReports.generateReport_month.original.html
@@ -3023,7 +3023,7 @@
                                                     
                                                                     <tr style="">
                                                                 <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
-                                                                                                                                                                        Unknown - Unknown - (xx-xx)                                                                                                                        </td>
+                                                                                                                                                                        Unknown (xx)                                                                                                                        </td>
                                             <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
                                                                                                 8
                                                                                     </td>
@@ -3046,7 +3046,7 @@
                             
                                                                     <tr style="background-color: rgb(249,250,250)">
                                                                 <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
-                                                                                                                                                                        French - France - (fr-fr)                                                                                                                        </td>
+                                                                                                                                                                        French (fr)                                                                                                                        </td>
                                             <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
                                                                                                 2
                                                                                     </td>
