--- a/plugins/Feedback/angularjs/ratefeature/ratefeature.directive.html
+++ b/plugins/Feedback/angularjs/ratefeature/ratefeature.directive.html
@@ -1,23 +1,23 @@
-<div title="{{ 'Feedback_RateFeatureTitle'|translate:title }}" class="ratefeature">
+<div title="{{ 'Feedback_RateFeatureTitle'|translate:rateFeature.title }}" class="ratefeature">
 
     <div class="iconContainer"
          ng-mouseenter="view.expanded=true;"
          ng-mouseleave="view.expanded=false">
 
-        <img ng-click="likeFeature();view.showFeedbackForm=true;"
+        <img ng-click="rateFeature.likeFeature();view.showFeedbackForm=true;"
              class="like-icon"
              src="plugins/Feedback/angularjs/ratefeature/thumbs-up.png"/>
 
-        <img ng-click="dislikeFeature();view.showFeedbackForm=true;"
+        <img ng-click="rateFeature.dislikeFeature();view.showFeedbackForm=true;"
              class="dislike-icon"
              ng-show="view.expanded"
              src="plugins/Feedback/angularjs/ratefeature/thumbs-down.png"/>
     </div>
 
-    <div class="ui-confirm ratefeatureDialog" piwik-dialog="view.showFeedbackForm" yes="sendFeedback(view.feedbackMessage)">
+    <div class="ui-confirm ratefeatureDialog" piwik-dialog="view.showFeedbackForm" yes="rateFeature.sendFeedback(view.feedbackMessage)">
         <h2>{{ 'Feedback_RateFeatureThankYouTitle'|translate:title }}</h2>
-        <p ng-if="like">{{ 'Feedback_RateFeatureLeaveMessageLike'|translate }}</p>
-        <p ng-if="!like">{{ 'Feedback_RateFeatureLeaveMessageDislike'|translate }}</p>
+        <p ng-if="rateFeature.like">{{ 'Feedback_RateFeatureLeaveMessageLike'|translate }}</p>
+        <p ng-if="!rateFeature.like">{{ 'Feedback_RateFeatureLeaveMessageDislike'|translate }}</p>
         <br />
 
         <div class="messageContainer">
@@ -29,8 +29,8 @@
                value="{{ 'Feedback_SendFeedback'|translate }}" role="yes"/>
     </div>
 
-    <div class="ui-confirm ratefeatureDialog" piwik-dialog="ratingDone" yes="">
-        <h2>{{ 'Feedback_ThankYou'|translate:title }}</h2>
+    <div class="ui-confirm ratefeatureDialog" piwik-dialog="rateFeature.ratingDone" yes="">
+        <h2>{{ 'Feedback_ThankYou'|translate:rateFeature.title }}</h2>
 
         <input type="button" value="{{ 'General_Ok'|translate }}" role="yes"/>
     </div>
