--- a/tests/PHPUnit/Integration/expected/test_ecommerceOrderWithItems_scheduled_report_in_html_tables_only__ScheduledReports.generateReport_week.original.html
+++ b/tests/PHPUnit/Integration/expected/test_ecommerceOrderWithItems_scheduled_report_in_html_tables_only__ScheduledReports.generateReport_week.original.html
@@ -6521,7 +6521,7 @@
                                                     
                                                                     <tr style="">
                                                                 <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
-                                                                                                                                                                            <a style="color: rgb(68,68,68);" href='http://piwik.org/faq/general/#faq_52'>
+                                                                                                                                                                            <a style="color: rgb(68,68,68);" href='http://'>
                                                                         Unknown                                                                            </a>
                                                                                                                         </td>
                                             <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
