refs #6511 fixed some tests which shows it seems to work now. I presume the expected results are correct but I do not know. Also updated another test where someone committed his path from his local server

--- a/tests/PHPUnit/System/expected/test_TwoVisitors_twoWebsites_differentDays_scheduled_report_in_html_tables_only__ScheduledReports.generateReport_month.original.html
+++ b/tests/PHPUnit/System/expected/test_TwoVisitors_twoWebsites_differentDays_scheduled_report_in_html_tables_only__ScheduledReports.generateReport_month.original.html
@@ -170,6 +170,31 @@
                 </a>
             </li>
                     <li>
+                <a href="#Actions_getSiteSearchKeywords" style="text-decoration:none; color: rgb(68,68,68);">
+                    Site Search Keywords
+                </a>
+            </li>
+                    <li>
+                <a href="#Actions_getSiteSearchNoResultKeywords" style="text-decoration:none; color: rgb(68,68,68);">
+                    Search Keywords with No Results
+                </a>
+            </li>
+                    <li>
+                <a href="#Actions_getSiteSearchCategories" style="text-decoration:none; color: rgb(68,68,68);">
+                    Search Categories
+                </a>
+            </li>
+                    <li>
+                <a href="#Actions_getPageUrlsFollowingSiteSearch" style="text-decoration:none; color: rgb(68,68,68);">
+                    Pages Following a Site Search
+                </a>
+            </li>
+                    <li>
+                <a href="#Actions_getPageTitlesFollowingSiteSearch" style="text-decoration:none; color: rgb(68,68,68);">
+                    Page Titles Following a Site Search
+                </a>
+            </li>
+                    <li>
                 <a href="#Referrers_getReferrerType" style="text-decoration:none; color: rgb(68,68,68);">
                     Referrer Type
                 </a>
@@ -3600,6 +3625,31 @@
     There is no data for this report.
 <h2 id="Events_getName" style="color: rgb(126,115,99); font-size: 11pt;">
     Event Names
+</h2>
+
+    There is no data for this report.
+<h2 id="Actions_getSiteSearchKeywords" style="color: rgb(126,115,99); font-size: 11pt;">
+    Site Search Keywords
+</h2>
+
+    There is no data for this report.
+<h2 id="Actions_getSiteSearchNoResultKeywords" style="color: rgb(126,115,99); font-size: 11pt;">
+    Search Keywords with No Results
+</h2>
+
+    There is no data for this report.
+<h2 id="Actions_getSiteSearchCategories" style="color: rgb(126,115,99); font-size: 11pt;">
+    Search Categories
+</h2>
+
+    There is no data for this report.
+<h2 id="Actions_getPageUrlsFollowingSiteSearch" style="color: rgb(126,115,99); font-size: 11pt;">
+    Pages Following a Site Search
+</h2>
+
+    There is no data for this report.
+<h2 id="Actions_getPageTitlesFollowingSiteSearch" style="color: rgb(126,115,99); font-size: 11pt;">
+    Page Titles Following a Site Search
 </h2>
 
     There is no data for this report.
