Fixing more tests.

--- a/tests/PHPUnit/System/expected/test_TwoVisitors_twoWebsites_differentDays_scheduled_report_in_html_tables_only__ScheduledReports.generateReport_month.original.html
+++ b/tests/PHPUnit/System/expected/test_TwoVisitors_twoWebsites_differentDays_scheduled_report_in_html_tables_only__ScheduledReports.generateReport_month.original.html
@@ -1936,13 +1936,13 @@
                                                                                                 41
                                                                                     </td>
                                             <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
-                                                                                                4.56
+                                                                                                4.6
                                                                                     </td>
                                             <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
                                                                                                 00:13:21
                                                                                     </td>
                                             <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
-                                                                                                11.11%
+                                                                                                11%
                                                                                     </td>
                                             <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
                                                                                                 0%
@@ -2400,13 +2400,13 @@
                                                                                                 41
                                                                                     </td>
                                             <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
-                                                                                                4.56
+                                                                                                4.6
                                                                                     </td>
                                             <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
                                                                                                 00:13:21
                                                                                     </td>
                                             <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
-                                                                                                11.11%
+                                                                                                11%
                                                                                     </td>
                                             <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
                                                                                                 0%
@@ -3250,13 +3250,7 @@
                     &nbsp;Bounces&nbsp;&nbsp;
                 </th>
                             <th style="padding: 6px 0;">
-                    &nbsp;Avg. time on page&nbsp;&nbsp;
-                </th>
-                            <th style="padding: 6px 0;">
                     &nbsp;Bounce Rate&nbsp;&nbsp;
-                </th>
-                            <th style="padding: 6px 0;">
-                    &nbsp;Exit rate&nbsp;&nbsp;
                 </th>
                             <th style="padding: 6px 0;">
                     &nbsp;Avg. generation time&nbsp;&nbsp;
@@ -3276,12 +3270,6 @@
                                                                                                 0
                                                                                     </td>
                                             <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
-                                                                                                00:05:20
-                                                                                    </td>
-                                            <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
-                                                                                                0%
-                                                                                    </td>
-                                            <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
                                                                                                 0%
                                                                                     </td>
                                             <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
@@ -3299,12 +3287,6 @@
                                                                                     </td>
                                             <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
                                                                                                 1
-                                                                                    </td>
-                                            <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
-                                                                                                00:00:00
-                                                                                    </td>
-                                            <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
-                                                                                                100%
                                                                                     </td>
                                             <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
                                                                                                 100%
@@ -3337,12 +3319,6 @@
                     &nbsp;Unique Pageviews&nbsp;&nbsp;
                 </th>
                             <th style="padding: 6px 0;">
-                    &nbsp;Avg. time on page&nbsp;&nbsp;
-                </th>
-                            <th style="padding: 6px 0;">
-                    &nbsp;Bounce Rate&nbsp;&nbsp;
-                </th>
-                            <th style="padding: 6px 0;">
                     &nbsp;Exit rate&nbsp;&nbsp;
                 </th>
                             <th style="padding: 6px 0;">
@@ -3363,12 +3339,6 @@
                                                                                                 8
                                                                                     </td>
                                             <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
-                                                                                                00:06:00
-                                                                                    </td>
-                                            <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
-                                                                                                0%
-                                                                                    </td>
-                                            <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
                                                                                                 100%
                                                                                     </td>
                                             <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
@@ -3386,12 +3356,6 @@
                                                                                     </td>
                                             <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
                                                                                                 1
-                                                                                    </td>
-                                            <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
-                                                                                                00:00:00
-                                                                                    </td>
-                                            <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
-                                                                                                100%
                                                                                     </td>
                                             <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
                                                                                                 100%
@@ -3553,13 +3517,7 @@
                     &nbsp;Bounces&nbsp;&nbsp;
                 </th>
                             <th style="padding: 6px 0;">
-                    &nbsp;Avg. time on page&nbsp;&nbsp;
-                </th>
-                            <th style="padding: 6px 0;">
                     &nbsp;Bounce Rate&nbsp;&nbsp;
-                </th>
-                            <th style="padding: 6px 0;">
-                    &nbsp;Exit rate&nbsp;&nbsp;
                 </th>
                             <th style="padding: 6px 0;">
                     &nbsp;Avg. generation time&nbsp;&nbsp;
@@ -3575,12 +3533,6 @@
                                                                                     </td>
                                             <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
                                                                                                 0
-                                                                                    </td>
-                                            <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
-                                                                                                00:07:30
-                                                                                    </td>
-                                            <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
-                                                                                                0%
                                                                                     </td>
                                             <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
                                                                                                 0%
@@ -3600,13 +3552,7 @@
                                                                                                 1
                                                                                     </td>
                                             <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
-                                                                                                00:00:00
-                                                                                    </td>
-                                            <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
                                                                                                 100%
-                                                                                    </td>
-                                            <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
-                                                                                                50%
                                                                                     </td>
                                             <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
                                                                                                 0.14s
@@ -3636,12 +3582,6 @@
                     &nbsp;Unique Pageviews&nbsp;&nbsp;
                 </th>
                             <th style="padding: 6px 0;">
-                    &nbsp;Avg. time on page&nbsp;&nbsp;
-                </th>
-                            <th style="padding: 6px 0;">
-                    &nbsp;Bounce Rate&nbsp;&nbsp;
-                </th>
-                            <th style="padding: 6px 0;">
                     &nbsp;Exit rate&nbsp;&nbsp;
                 </th>
                             <th style="padding: 6px 0;">
@@ -3660,12 +3600,6 @@
                                                                                                 8
                                                                                     </td>
                                             <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
-                                                                                                00:00:00
-                                                                                    </td>
-                                            <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
-                                                                                                0%
-                                                                                    </td>
-                                            <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
                                                                                                 100%
                                                                                     </td>
                                             <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
@@ -3681,12 +3615,6 @@
                                                                                     </td>
                                             <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
                                                                                                 2
-                                                                                    </td>
-                                            <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
-                                                                                                00:00:00
-                                                                                    </td>
-                                            <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
-                                                                                                100%
                                                                                     </td>
                                             <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
                                                                                                 50%
@@ -4129,6 +4057,14 @@
                                                                     <tr style="background-color: rgb(249,250,250)">
                                                                 <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
                                                                                                                                                                         Revenue                                                                                                                        </td>
+                                            <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
+                                                                                                $ 0
+                                                                                    </td>
+                                    </tr>
+                            
+                                                                    <tr style="">
+                                                                <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
+                                                                                                                                                                        Average Order Value                                                                                                                        </td>
                                             <td style="font-size: 11pt; border-bottom: 1px solid rgb(231,231,231); padding: 5px 0 5px 5px;">
                                                                                                 $ 0
                                                                                     </td>
