--- a/tests/PHPUnit/System/expected/test_TwoVisitors_twoWebsites_differentDays_scheduled_report_in_html_tables_only__ScheduledReports.generateReport_month.original.html
+++ b/tests/PHPUnit/System/expected/test_TwoVisitors_twoWebsites_differentDays_scheduled_report_in_html_tables_only__ScheduledReports.generateReport_month.original.html
@@ -291,7 +291,7 @@
             </li>
                     <li>
                 <a href="#DevicesDetection_getBrowserVersions" style="text-decoration:none; color: rgb(68,68,68);">
-                    Browser Version
+                    Browser version
                 </a>
             </li>
                     <li>
@@ -4756,7 +4756,7 @@
         Back to top
     </a>
 <h2 id="DevicesDetection_getBrowserVersions" style="color: rgb(126,115,99); font-size: 11pt;">
-    Browser Version
+    Browser version
 </h2>
 
     
