--- a/tests/PHPUnit/System/expected/test_ecommerceOrderWithItems_scheduled_report_in_html_tables_and_graph__ScheduledReports.generateReport_week.original.html
+++ b/tests/PHPUnit/System/expected/test_ecommerceOrderWithItems_scheduled_report_in_html_tables_and_graph__ScheduledReports.generateReport_week.original.html
@@ -326,7 +326,7 @@
             </li>
                     <li>
                 <a href="#DevicesDetection_getBrowserVersions" style="text-decoration:none; color: rgb(68,68,68);">
-                    Browser Version
+                    Browser version
                 </a>
             </li>
                     <li>
@@ -6604,7 +6604,7 @@
         Back to top
     </a>
 <h2 id="DevicesDetection_getBrowserVersions" style="color: rgb(126,115,99); font-size: 11pt;">
-    Browser Version
+    Browser version
 </h2>
 
             <img alt=""
